# RayWorm

./: .gitignore  CMakeLists.txt  build.sh  buildGTest.sh  runTest.sh
main/Asset/: CMakeLists.txt
main/Asset/include/: RayBuffer.h  RayLoader.h  RayPrimitive.h
main/Asset/src/: GLtfLoader.cpp  GltfLoader.h  RayBuffer.cpp  RayLoader.cpp  RayPrimitive.cpp
main/Asset/test/: CMakeLists.txt  main.cpp
main/Common/: CMakeLists.txt
main/Common/include/: RayBasic.h  RayLog.h  RaySingleton.h  RayTime.h  Singleton.h
main/Common/src/: RayLog.cpp  RayTime.cpp  Test.cpp
main/Common/test/: CMakeLists.txt  SingletonTest.h  main.cpp
main/Loader/: CMakeLists.txt
main/Loader/include/: Loader.h
main/Loader/src/: GLtfLoader.cpp  GltfLoader.h  Loader.cpp
main/Loader/test/: CMakeLists.txt  main.cpp
main/Scene/: CMakeLists.txt
main/Scene/include/: Basic.h  Buffer.h  Camera.h  Geometry.h  Loader.h  Mesh.h  Node.h  Object.h  Primitive.h  RayBasic.h  RayBuffer.h  RayCamera.h  RayLoader.h  RayMesh.h  RayNode.h  RayPrimitive.h  RayShape.h  Shape.h
main/Scene/src/: Buffer.cpp  Camera.cpp  GLtfLoader.cpp  GltfLoader.h  Loader.cpp  Node.cpp  Primitive.cpp  RayBuffer.cpp  RayCamera.cpp  RayDebug.h  RayLoader.cpp  RayMesh.cpp  RayNode.cpp  RayPrimitive.cpp  RayShape.cpp  Shape.cpp
main/Scene/test/: CMakeLists.txt  main.cpp
main/SceneDesc/: CMakeLists.txt
main/SceneDesc/include/: RayCamera.h  RayMesh.h  RayNode.h  RayScene.h  RayShape.h
main/SceneDesc/src/: RayCamera.cpp  RayMesh.cpp  RayNode.cpp  RayShape.cpp
main/SceneDesc/test/: CMakeLists.txt  main.cpp
main/Shape/: CMakeLists.txt
main/Shape/include/: RayShape.h
main/Shape/src/: RayShape.cpp
main/Shape/test/: CMakeLists.txt  main.cpp
